[package]
name = "tan-build-server"
description = "An BSP server for the Tan Language"
version = "0.12.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tan-language/tan-build-server"
keywords = ["tan", "language", "lsp", "ide"]
authors = ["George Moschovitis <gmosx@reizu.org>"]

[dependencies]
